# platanus-hack-25-team-7

./: .gitignore  README.md  package-lock.json  package.json  platanus-hack-project.json  pyproject.toml
.github/: copilot-instructions.md
backend/: Dockerfile  Makefile  main.py  requirements.txt
backend/models/: schemas.py
backend/notebooks/: vu.ipynb  workflow_mma.ipynb  workflow_own.ipynb
backend/prompts/: __init__.py  coach_prompt_template.txt  general_analyst_prompt.txt
backend/services/: chat_service.py  llm_service.py  video_service.py
backend_aws/: Makefile  template.yaml  upload_prompts.py
backend_aws/analyzer_handler/: Dockerfile  handler.py  llm_service.py  requirements.txt
backend_aws/analyzer_handler/prompts/: __init__.py  loader.py
backend_aws/api_handler/: Dockerfile  app.py  requirements.txt  schemas.py
backend_aws/api_handler/services/: chat_service.py
backend_aws/events/: analysis_event.json  split_event.json
backend_aws/shared/: db_service.py
backend_aws/splitter_handler/: Dockerfile  handler.py  requirements.txt
mma-ai-app-frontend/: package.json
mma-ai-app-frontend/src/: App.jsx  index.css
mma-ai-app-frontend/src/components/: CameraRecorder.jsx  ChatVideoInsights.jsx  ProcessingLoader.jsx  VideoUploader.jsx
mma-ai-app-frontend/src/hooks/: useContinuousRecorder.js  useRecorder.js
mma-ai-app-frontend/src/pages/: Analysis.jsx  Home.jsx
mma-ai-app-frontend/src/utils/: api.js  apiAdapter.js  fakeVideoAnalysis.js
sports-ai-app-frontend/: deploy_full_frontend.sh  index.html  package-lock.json  package.json
sports-ai-app-frontend/src/: App.css  App.jsx  index.css
sports-ai-app-frontend/src/components/: ChatVideoInsights.jsx  ParticleBackground.jsx  VideoReview.jsx  (+1 more)
(+12 files in other folders)
