[tool.poetry]
name = "platanus"
version = "0.1.0"
description = "MMA video analysis project"
authors = ["dguerrach", "tenken", "lagg"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "1.0.3"
google-genai = "^1.26.0"
jupyter = "^1.0.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
pytest = "^8.0.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

