[tool.poetry]
name = "platanus"
version = "0.1.0"
description = "MMA video analysis project"
authors = ["dguerrach", "tenken", "lagg"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.121.3"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-multipart = "^0.0.20"
python-dotenv = "^1.2.1"
google-genai = "^1.52.0"
pydantic = "^2.12.4"
httpx = "^0.28.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-timeout = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

